--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-br" class="">
   <head>
     <meta charset="UTF-8" />
 
@@ -11,7 +11,7 @@
 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap" rel="stylesheet">
-    <title>Vite + React</title>
+    <title>Feed</title>
   </head>
   <body>
     <div id="root"></div>
